--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "strata"]
 	path = strata
 	url = git://github.com/bigeasy/strata.git
+[submodule "edify"]
+	path = edify
+	url = git://github.com/bigeasy/edify.git
