--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "edify"]
 	path = edify
 	url = git://github.com/bigeasy/edify.git
+[submodule "code"]
+	path = code
+	url = git://github.com/bigeasy/strata.git
