--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: node_js
+
 node_js:
   - 0.6
+
+# Not using `npm install --dev` because it is recursive. It will pull in the all
+# development dependencies for CoffeeScript. Way too much spew in the Travis CI
+# build output.
+
 before_install:
-  - npm install --dev
+  - npm install
+  - npm install coffee-script ace.is.aces.in.my.book
   - git submodule init && git submodule update
+  - cake compile
