--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: node_js
 node_js:
   - 0.6
 
+branches:
+  only:
+    - javascript
+
 # Not using `npm install --dev` because it is recursive. It will pull in the all
 # development dependencies for CoffeeScript. Way too much spew in the Travis CI
 # build output.
