--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   { "coffee-script": ">=1.1.3"
   , "ace.is.aces.in.my.book": ">=0.0.3" }
 , "dependencies":
-  { "streamline": ">=0.2.4" }
+  { "streamline": ">=0.2.4", "streamliner_": ">=0.0.1" }
 , "lib" : "lib"
 , "main" : "./lib/strata"
 , "version" : "0.0.1"
