--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
 branches:
   only:
     - javascript
+    - travis-ci
 
 # Not using `npm install --dev` because it is recursive. It will pull in the all
 # development dependencies for CoffeeScript. Way too much spew in the Travis CI
