Add test cleanup functions.
Updated for test framework rename. Also, using a new framework facility for set
up and tear down of tests. The cleanup functions in the test harnesses are run
once at the beginning of a test and once at the end. We can also specify a setup
function, which is run after the defensive cleanup at the start of the test.

This means we can cleanup our temporary directory, deleting it entirely when we
have a successful run, so we no longer to exclude these temporary directories
from `git` operations using `.gitignore`. If the test are passing, then the
temporary directories are all cleaned away.

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
 , "contributors" : []
 , "devDependencies":
   { "coffee-script": ">=1.1.3"
-  , "ace.is.aces.in.my.book": ">=0.0.3" }
+  , "proof": ">=0.0.1" }
 , "dependencies":
   { "streamline": ">=0.2.4", "streamliner_": ">=0.0.1" }
 , "lib" : "lib"
 , "main" : "./lib/strata"
 , "version" : "0.0.1"
-, "scripts" : { "test": "ace t/*/*.t.coffee" }
+, "scripts" : { "test": "proof t/*/*.t.coffee" }
 , "engines" : { "node": "> 0.6.0" }
 }
