Root branch split.
Strong showing for Streamline.js here. Notice how the `splitLeaf` function can
simply call `shouldSplitBranch`, which recursively splits all the branch pages.
The logic is greatly simplified. A call to `process.nextTick` will keep us from
blowing the stack.

Removed some `TODO` comments relating to the splice method.

Added some code to capture thoughts on how to implement branch page split.

Fixed the author address.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 , "description" : "Evented I/O B-tree"
 , "url" : "http://bigeasy.github.com/strata"
 , "keywords" : ["btree", "database", "json"]
-, "author" : "Alan Gutierrez <alan@blogometer.com>"
+, "author" : "Alan Gutierrez <alan@prettyrobots.com>"
 , "contributors" : []
 , "devDependencies":
   { "coffee-script": ">=1.1.3"
