--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 
 branches:
   only:
-    - javascript
+    - coffeescript
     - travis-ci
 
 # Not using `npm install --dev` because it is recursive. It will pull in the all
