Proof conventions, Cakefile, parseInt.
Update the tests to follow the newly documented Proof conventions.

Removed unneeded cruft from the `Cakefile`.

Changed a call to `parseInt` to simply use the `+` operator.

Closes #14.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
 , "lib" : "lib"
 , "main" : "./lib/strata"
 , "version" : "0.0.1"
-, "scripts" : { "test": "proof t/*/*.t.coffee" }
+, "scripts" : { "test": "proof t/*/*.t" }
 , "engines" : { "node": "> 0.6.0" }
 }
