--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "name" : "strata"
+{ "name" : "b-tree"
+, "version" : "0.0.1"
 , "description" : "Evented I/O B-tree"
 , "url" : "http://bigeasy.github.com/strata"
 , "keywords" : ["btree", "database", "json"]
@@ -11,7 +12,6 @@
   { "streamline": ">=0.2.4" }
 , "lib" : "lib"
 , "main" : "./lib/strata"
-, "version" : "0.0.1"
 , "scripts" : { "test": "proof t/*/*.t" }
 , "engines" : { "node": "> 0.6.0" }
 }
