--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 
 branches:
   only:
-    - coffeescript
+    - master
     - travis-ci
 
 # Not using `npm install --dev` because it is recursive. It will pull in the all
