Fixed repository URL in `package.json`.
Closes #43.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   }]
 , "repository":
   { "type": "git"
-  , "url": "http://github.com/bigeasy/strta.git"
+  , "url": "http://github.com/bigeasy/strata.git"
   }
 }
