--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 , "contributors" : []
 , "devDependencies":
   { "proof": "0.0.15" }
-, "scripts" : { "test": "proof t/*/*.t" }
+, "scripts" : { "test": "proof t/*/*.t.js" }
 , "engines" : { "node": "> 0.6.0" }
 , "homepage": "https://github.com/bigeasy/strata"
 , "licenses": [
