--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 , "author" : "Alan Gutierrez <alan@prettyrobots.com>"
 , "contributors" : []
 , "devDependencies":
-  { "proof": "0.0.15", "cadence": "0.0.7" }
+  { "proof": "0.0.15" }
 , "scripts" : { "test": "proof t/*/*.t.js" }
 , "engines" : { "node": "> 0.6.0" }
 , "homepage": "https://github.com/bigeasy/strata"
