Upgrade Proof to 0.0.26.
Closes #67.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 , "keywords" : ["btree", "database", "json", "b-tree"]
 , "author" : "Alan Gutierrez <alan@prettyrobots.com>"
 , "contributors" : []
-, "devDependencies":
-  { "proof": "0.0.22" }
+, "devDependencies": { "proof": "0.0.26" }
 , "scripts" : { "test": "proof t/*/*.t.js" }
 , "engines" : { "node": "> 0.8.0" }
 , "homepage": "https://github.com/bigeasy/strata"
