Tidy `package.json`.

--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
-{ "name" : "b-tree"
-, "version" : "0.0.3"
-, "description" : "Evented I/O B-tree in pure JavaScript for Node.js"
-, "url" : "http://bigeasy.github.com/strata"
-, "keywords" : ["btree", "database", "json", "b-tree"]
-, "author" : "Alan Gutierrez <alan@prettyrobots.com>"
-, "contributors" : []
-, "devDependencies": { "proof": "0.0.32" }
-, "scripts" : { "test": "proof platform win32 && proof test */*/*.t.js || t/test" }
-, "engines" : { "node": "> 0.8.0" }
-, "homepage": "https://github.com/bigeasy/strata"
-, "licenses": [
-  { "type": "MIT"
-  , "url": "http://github.com/bigeasy/strata/raw/master/LICENSE"
-  }]
-, "repository":
-  { "type": "git"
-  , "url": "http://github.com/bigeasy/strata.git"
-  }
+{
+    "name":         "b-tree",
+    "version":      "0.0.3",
+    "description":  "Evented I/O B-tree in pure JavaScript for Node.js.",
+    "url":          "http://bigeasy.github.com/strata",
+    "author":       "Alan Gutierrez <alan@prettyrobots.com>",
+    "keywords": [
+        "btree", "database", "json", "b-tree"
+    ],
+    "contributors": [
+        {
+            "name":   "Demarius Chrite",
+            "email":  "chrite.demarius@gmail.com",
+            "web":    "https://github.com/demarius",
+        }
+    ],
+    "devDependencies": {
+        "proof": "0.0.32"
+    },
+    "scripts": {
+        "test": "proof platform win32 && proof test */*/*.t.js || t/test"
+    },
+    "homepage": "https://github.com/bigeasy/strata",
+    "licenses": [{
+        "type": "MIT",
+        "url": "http://github.com/bigeasy/strata/raw/master/LICENSE"
+    }],
+    "repository": {
+        "type": "git",
+        "url": "http://github.com/bigeasy/strata.git"
+    }
 }
