Fix broken `package.json`.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         {
             "name":   "Demarius Chrite",
             "email":  "chrite.demarius@gmail.com",
-            "web":    "https://github.com/demarius",
+            "web":    "https://github.com/demarius"
         }
     ],
     "devDependencies": {
