--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-    "name":         "b-tree",
-    "version":      "0.0.3",
-    "description":  "Evented I/O B-tree in pure JavaScript for Node.js.",
-    "url":          "http://bigeasy.github.com/strata",
-    "author":       "Alan Gutierrez <alan@prettyrobots.com>",
-    "keywords": [
-        "btree", "database", "json", "b-tree"
+    "name":             "b-tree",
+    "version":          "0.0.3",
+    "author":           "Alan Gutierrez <alan@prettyrobots.com>",
+    "description":      "Evented I/O B-tree in pure JavaScript for Node.js.",
+    "keywords":
+    [
+                        "btree", "database", "json", "b-tree"
     ],
-    "contributors": [
-        {
-            "name":   "Demarius Chrite",
-            "email":  "chrite.demarius@gmail.com",
-            "web":    "https://github.com/demarius"
-        }
-    ],
-    "devDependencies": {
-        "proof": "0.0.36"
+    "url":              "http://bigeasy.github.com/strata",
+    "homepage":         "https://github.com/bigeasy/strata",
+    "bugs":             "https://github.com/bigeasy/strata/issues",
+    "repository":
+    {
+                        "type": "git",
+                        "url": "http://github.com/bigeasy/strata.git"
     },
-    "scripts": {
-        "test": "proof platform win32 && proof test */*/*.t.js || t/test"
-    },
-    "homepage": "https://github.com/bigeasy/strata",
-    "bugs": "https://github.com/bigeasy/strata/issues",
-    "licenses": [{
-        "type": "MIT",
-        "url": "http://github.com/bigeasy/strata/raw/master/LICENSE"
+    "contributors":
+    [{
+                        "name":   "Demarius Chrite",
+                        "email":  "chrite.demarius@gmail.com",
+                        "web":    "https://github.com/demarius"
     }],
-    "repository": {
-        "type": "git",
-        "url": "http://github.com/bigeasy/strata.git"
+    "devDependencies":
+    {
+                        "proof": "0.0.36"
+    },
+    "licenses":
+    [{
+                        "type": "MIT",
+                        "url": "http://github.com/bigeasy/strata/raw/master/LICENSE"
+    }],
+    "scripts":
+    {
+        "test": "proof platform win32 && proof test */*/*.t.js || t/test"
     }
 }
