Add `magazine` and `sequester` dependencies.
See #183.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
                         "email":  "chrite.demarius@gmail.com",
                         "web":    "https://github.com/demarius"
     }],
+    "dependencies":
+    {
+                        "magazine": "0.0.0",
+                        "sequester": "0.0.1"
+    },
     "devDependencies":
     {
                         "proof": "0.0.36"
