--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name":             "b-tree",
-    "version":          "0.0.10",
+    "version":          "0.0.11",
     "author":           "Alan Gutierrez <alan@prettyrobots.com>",
     "description":      "Evented I/O B-tree in pure JavaScript for Node.js.",
     "keywords":
     [
-                        "btree", "database", "json", "b-tree"
+                        "btree", "database", "json", "b-tree", "leveldb", "levelup"
     ],
     "url":              "http://bigeasy.github.com/strata",
     "homepage":         "https://github.com/bigeasy/strata",
