Update MIT License to 2014.
Closes #331.

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     },
     "licenses":
     [{
-                        "type": "GNU Affero GPL 3.0",
-                        "url": "http://github.com/bigeasy/strata/raw/master/COPYING"
+                        "type": "MIT",
+                        "url": "http://github.com/bigeasy/strata/raw/master/LICENSE"
     }],
     "scripts":
     {
