Add Cadence as dependency for testing.
Cadence will no longer be exposed by Proof. We're about to upgrade
Proof. In Proof 0.0.43, you'll no longer be able to use the Cadence that
Proof uses. You'll have to add Cadence as a development dependency to
use it for testing.

Closes #340.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     },
     "devDependencies":
     {
-                        "proof": "0.0.41"
+                        "proof": "0.0.41",
+                        "cadence": "0.0.36"
     },
     "licenses":
     [{
