Add Trascript as a depenency.
Closes #356.
Closes #355.
Closes #354.
See #107.
See #4.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dependencies":
     {
                         "magazine": "0.0.9",
-                        "sequester": "0.0.8"
+                        "sequester": "0.0.8",
+                        "transcript": "0.0.1"
     },
     "devDependencies":
     {
