Updated `Staccato` for rename from `Transcript.`

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     {
                         "magazine": "0.0.9",
                         "sequester": "0.0.8",
-                        "transcript": "0.0.1"
+                        "staccato": "0.0.0"
     },
     "devDependencies":
     {
