Rename main module to `strata.js`.
Closes #418.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
                         "email":  "chrite.demarius@gmail.com",
                         "web":    "https://github.com/demarius"
     }],
+    "main":             "strata.js",
     "dependencies":
     {
                         "magazine": "0.0.12",
