--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
                         "proof": "0.0.50",
                         "rimraf": "~2.2",
                         "mkdirp": "~0.3",
-                        "splice": "0.0.16",
+                        "advance": "0.0.10",
+                        "splice": "0.0.17",
                         "arguable": "0.0.22"
     },
     "licenses":
