--- a/package.json
+++ b/package.json
@@ -37,11 +37,7 @@
                         "splice": "0.0.21",
                         "arguable": "0.0.22"
     },
-    "licenses":
-    [{
-                        "type": "MIT",
-                        "url": "http://github.com/bigeasy/strata/raw/master/LICENSE"
-    }],
+    "license":          "MIT",
     "scripts":
     {
         "test": "proof platform win32 && proof test */*/*.t.js || t/test"
