Upgrade Magazine to 1.0.x.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "main":             "strata.js",
     "dependencies":
     {
-                        "magazine": "0.0.16",
+                        "magazine": "1.0.x",
                         "sequester": "1.0.x",
                         "cadence": "1.0.x"
     },
