Upgrade Arguable to 1.0.x.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
                         "mkdirp": "0.5.1",
                         "advance": "0.0.16",
                         "splice": "0.0.22",
-                        "arguable": "0.0.37"
+                        "arguable": "1.0.x"
     },
     "license":          "MIT",
     "scripts":
