Update GitHub Pages.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "strata"]
 	path = strata
 	url = https://github.com/bigeasy/strata.git
+[submodule "vendor/lesshat"]
+	path = vendor/lesshat
+	url = https://github.com/madebysource/lesshat.git
