--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "repository":
     {
                             "type": "git",
-                            "url": "http://github.com/bigeasy/strata.git"
+                            "url": "bigeasy/strata"
     },
     "dependencies":
     {
