Sketch of synchronous descent.
Or at least more synchronous than the previous descent. Instead of
maintaining callbacks that block others from descending we try to get to
the leaf without having to load a page but give up and start over if do
have to load a page. We are using a Cadence loop to descend but with
fewer asynchronous calls to locking mechanisms.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     },
     "dependencies":
     {
+                            "interrupt":                    "6.4.x",
                             "magazine":                     "4.0.x",
+                            "restrictor":                   "2.5.x",
                             "sequester":                    "1.0.x",
                             "cadence":                      "2.0.x"
     },
