--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ branches:
 
 before_install:
   - npm install --no-save --no-package-lock
-  - npm install -g istanbul coveralls
+  - npm install -g istanbul
