--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "main":                 "strata.js",
     "scripts":
     {
-                            "test": "proof test test/basics/io.t.js test/basics/get.t.js test/basics/recorder.t.js test/basics/shifter.t.js test/basics/insert.t.js"
+                            "test": "proof test test/basics/splitter.t.js test/basics/get.t.js test/basics/recorder.t.js test/basics/insert.t.js"
     }
 }
