Sketch of a commit utility.
All rewriting of branches for merge can be expressed with splice an
unlink. We'll need a special split operation for splits. We can make our
updates in memory synchronously, write the writes that were pending,
then quickly write out the rebalance as a plan and allow writing to
continue. We hold the pages in memory, so that they do not need to be
loaded while we are committing to our plan. Regular writes to leaves can
continue while the branches are being rewritten.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     {
                             "interrupt":                    "7.0.x",
                             "magazine":                     "5.0.x",
+                            "hash.fnv":                     "1.0.x",
                             "restrictor":                   "3.0.x",
                             "sequester":                    "1.0.x",
                             "cadence":                      "3.0.x"
@@ -42,6 +43,6 @@
     "main":                 "strata.js",
     "scripts":
     {
-                            "test": "proof test test/basics/splitter.t.js test/basics/get.t.js test/basics/recorder.t.js test/basics/insert.t.js"
+                            "test": "proof test test/basics/splitter.t.js test/basics/get.t.js test/basics/recorder.t.js test/basics/insert.t.js test/basics/commit.t.js"
     }
 }
