--- a/es6/package.json
+++ b/es6/package.json
@@ -28,6 +28,7 @@
           "dependencies": {
                     "ascension": "^1.0.1",
                     "interrupt": "^7.0.5",
+                    "p-queue": "^5.0.0",
                     "rimraf": "^2.6.3"
           },
           "devDependencies": {},
