--- a/es6/package.json
+++ b/es6/package.json
@@ -27,6 +27,8 @@
           },
           "dependencies": {
                     "ascension": "^1.0.1",
+                    "extant": "^1.0.11",
+                    "hash.fnv": "^1.0.5",
                     "interrupt": "^7.0.5",
                     "p-queue": "^5.0.0",
                     "rimraf": "^2.6.3"
