--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,18 @@
 sudo: false
 
+language: node_js
+
+node_js:
+  - '12'
+
 branches:
   only:
     - master
     - travis-ci
 
-language: node_js
-
-node_js:
-   - '12'
-   - '10'
-
-env:
-- SUBDIR=es6 MOCHA=mocha
-- SUBDIR=efcb
-
-matrix:
-  exclude:
-  - node_js: '10'
-    env: SUBDIR=es6 MOCHA=mocha
-
-before_install:
-- cd $SUBDIR
-- pwd
 install:
-- npm install --no-package-lock --no-save
-- npm install -g nyc $MOCHA
+  - npm install --no-package-lock --no-save
+  - npm install -g nyc mocha
+
 script:
-- nyc npm test
+  - nyc npm test
