--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
                     "ascension": "^1.0.1",
                     "extant": "^1.0.11",
                     "hash.fnv": "^1.0.5",
+                    "prospective": "0.0.x",
                     "interrupt": "^7.0.5",
                     "p-queue": "^5.0.0",
                     "rimraf": "^2.6.3"
