--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
                     "extant": "^1.0.11",
                     "hash.fnv": "^1.0.5",
                     "prospective": "0.0.x",
-                    "interrupt": "^7.0.5",
+                    "interrupt": "8.0.x",
                     "p-queue": "^5.0.0",
                     "rimraf": "^2.6.3"
           },
