--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
           "name": "b-tree.async",
+          "private": true,
           "version": "9.9.9",
           "description": "Async/Await I/O B-tree in pure JavaScript for Node.js.",
           "keywords": [
