Revert unit tests to Proof.
See #530.

--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     },
     "devDependencies":
     {
+                            "proof":                        "^8.0.0-alpha.8"
     },
     "main":                 "strata.js",
     "scripts":
     {
-                            "test": "mocha"
+                            "test": "proof test/*.test.js"
     }
 }
