Use Proof file suffix.
Closes #530.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "main":                 "strata.js",
     "scripts":
     {
-                            "test": "proof test/*.test.js"
+                            "test": "proof test/*.t.js"
     }
 }
