--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "8.0.x",
                             "p-queue":                      "6.2.0",
-                            "prospective":                  "0.0.x",
+                            "prospective":                  "^0.1.0-alpha.4",
                             "rimraf":                       "^3.0.0"
     },
     "devDependencies":
