--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
                             "ascension":                    "^1.0.1",
                             "destructible":                 "5.2.0-alpha.5",
                             "extant":                       "^1.0.11",
+                            "fracture":                     "0.3.0-alpha.7",
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "^9.0.0-alpha.4",
-                            "p-queue":                      "6.2.0",
                             "prospective":                  "^0.1.0-alpha.4",
                             "rimraf":                       "^3.0.0",
                             "turnstile":                    "6.0.0-alpha.2"
