--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
                             "fracture":                     "0.3.0-alpha.7",
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "^9.0.0-alpha.4",
+                            "keyify":                       "^2.0.3",
                             "prospective":                  "^0.1.0-alpha.4",
                             "rimraf":                       "^3.0.0",
                             "turnstile":                    "6.0.0-alpha.2"
