Upgrade `proof` to `^9.0.2`.
Closes #564.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     },
     "devDependencies":
     {
-                            "proof":                        "^8.0.0-alpha.8"
+                            "proof":                        "^9.0.2"
     },
     "main":                 "strata.js",
     "scripts":
