Remove `async` from package name.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "private":              true,
-    "name":                 "b-tree.async",
+    "name":                 "b-tree",
     "version":              "9.9.9",
     "description":
 
