--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private":              true,
     "name":                 "b-tree",
-    "version":              "9.9.9",
+    "version":              "2.0.0-alpha.0",
     "description":
 
       "Async/Await I/O B-tree in pure JavaScript for Node.js.",
