--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "dependencies":
     {
                             "ascension":                    "^1.2.0",
-                            "destructible":                 "6.2.*",
+                            "destructible":                 "7.0.0-alpha.2",
                             "extant":                       "^1.0.11",
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "^10.0.3",
                             "prospective":                  "^0.3.0",
                             "rimraf":                       "^3.0.0",
-                            "turnstile":                    "6.0.0-alpha.4"
+                            "turnstile":                    "6.0.0-alpha.7"
     },
     "devDependencies":
     {
