--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "dependencies":
     {
                             "ascension":                    "^1.2.0",
-                            "destructible":                 "7.0.0-alpha.10",
+                            "destructible":                 "^7.0.0-alpha.11",
                             "extant":                       "^1.0.11",
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "^10.0.3",
                             "prospective":                  "^0.3.0",
-                            "turnstile":                    "6.0.0-alpha.19"
+                            "turnstile":                    "^6.0.0-alpha.20"
     },
     "devDependencies":
     {
