--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "^10.0.3",
                             "prospective":                  "^0.3.0",
+                            "skip":                         "0.1.0",
                             "turnstile":                    "6.0.0-alpha.22"
     },
     "devDependencies":
