--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
                             "journalist":                   "0.1.7",
                             "prospective":                  "^0.3.0",
                             "rescue":                       "7.0.0-alpha.1",
-                            "skip":                         "0.1.1",
+                            "reciprocate":                  "0.0.0",
                             "turnstile":                    "6.0.0-alpha.25"
     },
     "devDependencies":
