--- a/package.json
+++ b/package.json
@@ -28,19 +28,18 @@
     "dependencies":
     {
                             "ascension":                    "^2.0.0",
-                            "destructible":                 "7.0.0-alpha.14",
                             "extant":                       "^1.0.11",
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "11.0.0-alpha.1",
                             "journalist":                   "0.1.7",
                             "prospective":                  "^0.3.0",
-                            "reciprocate":                  "0.0.0",
-                            "rescue":                       "7.0.0-alpha.1",
                             "turnstile":                    "6.0.0-alpha.25"
     },
     "devDependencies":
     {
-                            "proof":                        "^9.0.2"
+                            "destructible":                 "7.0.0-alpha.14",
+                            "proof":                        "^9.0.2",
+                            "reciprocate":                  "0.0.0"
     },
     "main":                 "strata.js",
     "scripts":
